* Now using a tree to represent the ncml of a file * added some icons to represent the different ncml elements * also added in columns to show generated ncml
git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/dcpt/trunk@14243 622dc1fb-2224-0410-ab72-dc85a3975e1a

--- a/src/main/webapp/css/dcpt.css
+++ b/src/main/webapp/css/dcpt.css
@@ -4,3 +4,19 @@ root {
 table {
 	empty-cells:show;
 }
+
+.dimension {
+	background-image: url(../images/tree/dimension.gif) !important;
+}
+.variable {
+	background-image: url(../images/tree/variable.gif) !important;
+}
+.remove {
+	background-image: url(../images/tree/remove.gif) !important;
+}
+.attribute {
+	background-image: url(../images/tree/attribute.gif) !important;
+}
+.group {
+	background-image: url(../images/tree/group.gif) !important;
+}
