Added in root netcdf node with icon, also got right edits working, (though saving doesn't do anything)
git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/dcpt/trunk@14291 622dc1fb-2224-0410-ab72-dc85a3975e1a

--- a/src/main/webapp/css/dcpt.css
+++ b/src/main/webapp/css/dcpt.css
@@ -20,3 +20,6 @@ table {
 .group {
 	background-image: url(../images/tree/group.gif) !important;
 }
+.netcdf {
+	background-image: url(../images/tree/ring2.gif) !important;
+}
